# sensor-dashboard

./: .gitignore  README.md  test.sql
api/: Cargo.toml  Dockerfile
api/queries/: insert_location.sql  insert_measurement.sql  insert_measurement_type.sql
api/src/: config.rs  db.rs  errors.rs  handlers.rs  main.rs  measurement.rs  models.rs
dashboard/: Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: main.rs
dashboard/src/components/: chart.rs  mod.rs  render_kpis.rs
dashboard/src/models/: mod.rs
dashboard/src/pages/: dashboard.rs
dashboard/src/services/: mod.rs
database/: data.sql  docker-compose.yml  queries.sql  tables.sql
sensor/: main.py  pyproject.toml
