[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors = ["Mads Hougesen <mads@mhouge.dk>"]
license = "MIT"
homepage = "https://github.com/hougesen/sensor-dashboard"
repository = "https://github.com/hougesen/sensor-dashboard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.8"
futures-util = "0.3.17"
serde = "1.0.104"
serde_json = "1"
config = "0.10.1"
deadpool-postgres = "0.5.0"
derive_more = "0.99.2"
dotenv = "0.15.0"
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
tokio-postgres = "0.5.1"