[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors = ["Mads Hougesen <mads@mhouge.dk>"]
license = "MIT"
homepage = "https://github.com/hougesen/sensor-dashboard"
repository = "https://github.com/hougesen/sensor-dashboard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
config = "0.10.1"
chrono = {version = "0.4", features = ["serde"]}
deadpool-postgres = "0.5.0"
derive_more = "0.99.2"
dotenv = "0.15.0"
serde = { version = "1.0.104", features = ["derive"] }
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
tokio-postgres = { version= "0.5.1", features=["with-chrono-0_4"] }