[tool.poetry]
name = "sensor-importer"
version = "0.1.0"
description = ""
authors = ["Mads Hougesen <madshougesen@gmail.com>"]
license = "MIT"
homepage = "https://github.com/hougesen/sensor-dashboard"
repository = "https://github.com/hougesen/sensor-dashboard"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
bme680 = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
